--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
     <title>My Second github repo</title>
 </head>
 <body>
-    
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur velit autem, possimus hic optio cupiditate magni beatae dicta quo minima.</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, aspernatur.</p>
 </body>
 </html>
